--- a/landing-page/src/Components/Experience.css
+++ b/landing-page/src/Components/Experience.css
@@ -2,6 +2,14 @@
 .job-title {
     color: var(--colorprimary);
 }
+.experience-title {
+    margin-top: 60px;
+    font-size: 20px;
+}
+.experience-desc {
+    font-size: 17px;
+}
+
 .experience-desc,
 .job-desc {
     color: var(--colorgreyletter);
@@ -9,7 +17,7 @@
 .gitdiv a {
     border: 1px solid rgb(48, 183, 176);
     background-color: rgb(48, 183, 176);
-    padding: 5px 40px;
+    padding: 3px 20px;
 
 }
 .github {
@@ -19,15 +27,16 @@
 }
 .github:hover {
     background-color: black;
-    color: red;
-    font-size: 20px;
+    color: rgb(48, 183, 176);
+
+    
 }
 
 .job-container{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 100px;
-    margin-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 20px;
     margin-left: 30px;
     margin-right: 30px;
     margin-top: 60px;
@@ -36,4 +45,65 @@
 .job-img {
     border: 1px solid black;
     border-radius: 30px;
+    width: 200px;
 }
+@media (min-width: 768px) {
+    .experience-title {
+        margin-top: 60px;
+        font-size: 35px;
+    }
+    .experience-desc {
+        font-size: 25px;
+    }
+    .github {
+        text-decoration: none;
+        color: white;
+        border-radius: 38px;
+        font-size: 30px;        
+    }
+    .job-container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 100px;
+        margin-bottom: 100px;
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-top: 60px;
+    
+    }
+    .job-img {
+        border: 1px solid black;
+        border-radius: 30px;
+        width: 250px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .experience-title {
+        font-size: 25px;
+    }
+    .experience-desc {
+        font-size: 20px;
+    }
+    .gitdiv a {
+        border: 1px solid rgb(48, 183, 176);
+        background-color: rgb(48, 183, 176);
+        padding: 5px 40px;
+    
+    }
+    .job-container{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 100px;
+        margin-bottom: 100px;
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-top: 60px;
+    
+    }
+    .job-img {
+        border: 1px solid black;
+        border-radius: 30px;
+    }
+}
+
