--- a/landing-page/src/Components/Header.css
+++ b/landing-page/src/Components/Header.css
@@ -1,22 +1,70 @@
 .wrap-header {
     display: flex;
     justify-content: space-between;
-    padding: 30px 50px; 
+    padding: 30px 30px; 
 }
 .link-title {
     text-decoration: none;
     font-family: var(--fontprimary);
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
     color: var(--colorprimary);
 }
 .wrap-header button {
-    border-radius: 40%;
-    width: 60px;
-    height: 30px;
+    border-radius: 30%;
+    width: 50px;
+    height: 20px;
     background-color: white;
     color: var(--colorprimary);
     border: 1px solid var(--colorgreylight);
     cursor: pointer;
 
+}
+@media (min-width: 1024px){
+    .wrap-header {
+        display: flex;
+        justify-content: space-between;
+        padding: 30px 50px; 
+    }
+    .link-title {
+        text-decoration: none;
+        font-family: var(--fontprimary);
+        font-weight: bold;
+        font-size: 20px;
+        color: var(--colorprimary);
+    }
+    .wrap-header button {
+        border-radius: 40%;
+        width: 60px;
+        height: 30px;
+        background-color: white;
+        color: var(--colorprimary);
+        border: 1px solid var(--colorgreylight);
+        cursor: pointer;
+    
+    }
+}
+@media (min-width: 768px) {
+    .wrap-header {
+        display: flex;
+        justify-content: space-between;
+        padding: 30px 50px; 
+    }
+    .link-title {
+        text-decoration: none;
+        font-family: var(--fontprimary);
+        font-weight: bold;
+        font-size: 25px;
+        color: var(--colorprimary);
+    }
+    .wrap-header button {
+        border-radius: 40%;
+        width: 90px;
+        height: 40px;
+        background-color: white;
+        color: var(--colorprimary);
+        border: 1px solid var(--colorgreylight);
+        cursor: pointer;
+    
+    }
 }
