--- a/landing-page/src/Components/Profile.css
+++ b/landing-page/src/Components/Profile.css
@@ -4,28 +4,28 @@
 }
 
 .main-Section {
-    display: grid;
-    grid-template-columns: 60% 40%;
-    margin-bottom: 100px;
-    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 65px;
+    padding-top: 0;
 
 }
 .main-Section > img {
-    grid-column: 2/3;
-    grid-row: 1/3;
+    
     margin-left: 70px;
     margin-right: 40px;
-    width: 400px;
-    height: 400px;
+    width: 200px;
+    height: 200px;
     border-radius: 32px;
 }
 .profile-title {
-    margin-top: 100px;
-    margin-bottom: -20px;
-    font-size: 40px;
+    margin-top: 30px;
+    margin-bottom: -10px;
+    font-size: 25px;
 }
 .profile-desc {
-    font-size: 24px;
+    margin-top: 30px;
+    font-size: 22px;
 }
 .profile-title,
 .skills-subtitle,
@@ -38,18 +38,109 @@
     color: var(--colorgreyletter);
 }
 .skills-subtitle {
-    font-size: 32px;
+    font-size: 25px;
+}
+.skills-desc {
+    font-size: 20px;
 }
 .wrap-skills {
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
     margin-top: 60px;
     margin-left: 40px;
     margin-right: 40px;
     margin-bottom: 0;
     gap:30px;
-    font-size: 14px;
+    font-size: 18px;
+}
+@media (min-width: 360px) {
+    .main-Section > img {
+        margin-top: 40px;
+        margin-left: 60px;
+        width: 250px;
+        height: 250px;
+        border-radius: 32px;
+    }
+}
+@media (min-width: 412px) {
+    .main-Section > img {
+        margin-top: 40px;
+        margin-left: 90px;
+        width: 250px;
+        height: 250px;
+        border-radius: 32px;
+    }
+}
+@media (min-width: 768px) {
+    .main-Section > img {
+        margin-top: 40px;
+        margin-left: 235px;
+        width: 300px;
+        height: 300px;
+        border-radius: 32px;
+    }
+    .profile-title {
+        margin-top: 50px;
+        margin-bottom: 10px;
+        font-size: 30px;
+    }
+    .profile-desc {
+        margin-top: 30px;
+        font-size: 24px;
+    }
+    .skills-subtitle {
+        font-size: 35px;
+    }
+    .skills-desc {
+        font-size: 25px;
+    }
+    .skill-name {
+        font-size: 27px;
+    }
+    .skill-desc {
+        font-size: 25px;
+    }
 }
 
-
-
+@media (min-width: 1024px) {
+    .main-Section {
+        display: grid;
+        grid-template-columns: 60% 40%;
+        margin-bottom: 100px;
+        padding-top: 100px;
+    
+    }
+    .main-Section > img {
+        grid-column: 2/3;
+        grid-row: 1/3;
+        margin-left: 70px;
+        margin-right: 40px;
+        width: 400px;
+        height: 400px;
+        border-radius: 32px;
+    }
+    .profile-title {
+        margin-top: 100px;
+        margin-bottom: -20px;
+        font-size: 40px;
+    }
+    .profile-desc {
+        font-size: 24px;
+    }
+    .skills-subtitle {
+        font-size: 32px;
+    }
+    .skills-desc {
+        font-size: 30px;
+    }
+    .wrap-skills {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        margin-top: 60px;
+        margin-left: 40px;
+        margin-right: 40px;
+        margin-bottom: 0;
+        gap:30px;
+        font-size: 14px;
+    }
+}
