Landing Page Actualización3

--- a/landing-page/src/Components/Profile.css
+++ b/landing-page/src/Components/Profile.css
@@ -17,6 +17,7 @@
     width: 200px;
     height: 200px;
     border-radius: 32px;
+    object-fit: cover;
 }
 .profile-title {
     margin-top: 30px;
