--- a/landing-page/src/Components/Experience.css
+++ b/landing-page/src/Components/Experience.css
@@ -46,6 +46,12 @@
     border: 1px solid black;
     border-radius: 30px;
     width: 200px;
+    transition: all 300ms;
+    position: relative;
+}
+
+.job-img:hover {
+    transform: scale(1.7);
 }
 @media (min-width: 768px) {
     .experience-title {
@@ -75,6 +81,11 @@
         border: 1px solid black;
         border-radius: 30px;
         width: 250px;
+        transition: all 300ms;
+        position: relative;
+    }
+    .job-img:hover {
+        transform: scale(1.4);
     }
 }
 
@@ -104,6 +115,11 @@
     .job-img {
         border: 1px solid black;
         border-radius: 30px;
+        transition: all 300ms;
+        position: relative;
+    }
+    .job-img:hover {
+        transform: scale(2);
     }
 }
 
