--- a/landing-page/src/Components/Profile.css
+++ b/landing-page/src/Components/Profile.css
@@ -127,6 +127,7 @@
     }
     .profile-desc {
         font-size: 24px;
+        margin-left: 10px;
     }
     .skills-subtitle {
         font-size: 32px;
